--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,7 @@
     "autoload": {
         "psr-4": {
             "Sitchco\\Parent\\": "src",
-            "Sitchco\\Parent\\Modules": "modules"
+            "Sitchco\\Parent\\Modules\\": "modules"
         }
     },
     "extra": {
