--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -1,3 +1,5 @@
 packages:
-    - '../../mu-plugins/sitchco-core/packages/build-tools/*'
-    - '../../mu-plugins/sitchco-core/packages/shared/*'
+  - ../../mu-plugins/sitchco-core/packages/build-tools/*
+  - ../../mu-plugins/sitchco-core/packages/shared/*
+onlyBuiltDependencies:
+  - esbuild
