--- a/package.json
+++ b/package.json
@@ -7,19 +7,13 @@
         "build": "module-builder build",
         "dev": "module-builder dev",
         "lint": "sitchco-lint",
-        "format": "sitchco-format",
-        "test": "pnpm --filter @sitchco/module-builder test",
-        "clean": "module-builder clean && find . -type d -name node_modules -prune -exec rm -rf {} \\;",
-        "reset": "pnpm clean && pnpm install"
+        "format": "sitchco-format"
     },
     "keywords": [],
     "author": "",
     "license": "ISC",
     "devDependencies": {
-        "@eslint/js": "^9.23.0",
         "@sitchco/dev-scripts": "workspace:*",
-        "@sitchco/eslint-config": "workspace:*",
-        "@sitchco/module-builder": "workspace:*",
-        "@sitchco/prettier-config": "workspace:*"
+        "@sitchco/module-builder": "workspace:*"
     }
 }
