Set empty config defaults for kadence tabs and accordion to skip preset step

--- a/package.json
+++ b/package.json
@@ -22,6 +22,10 @@
         "onlyBuiltDependencies": [
             "@parcel/watcher",
             "esbuild"
-        ]
+        ],
+        "overrides": {
+            "@sitchco/cli": "link:../../sitchco-packages/packages/tools/cli",
+            "@sitchco/eslint-config": "link:../../sitchco-packages/packages/configs/eslint-config"
+        }
     }
 }
