--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "keywords": [],
     "author": "",
     "license": "ISC",
+    "dependencies": {
+        "@wordpress/icons": "^10.15.0"
+    },
     "devDependencies": {
         "@sitchco/cli": "^2.1.9",
         "@sitchco/eslint-config": "^2.1.2"
